--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.1.0",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@popperjs/core": "^2.11.6",
+    "angular-cli-ghpages": "^1.0.5",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
     "ng2-search-filter": "^0.5.1",
