--- a/angular.json
+++ b/angular.json
@@ -88,7 +88,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/flag-icon-css/css/flag-icon.min.css",
+              "Pastareggia-app/node_modules/flag-icon-css/css/flag-icons.min.css"
+
             ],
             "scripts": []
           }
