--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "extract-translations": "ngx-translate-extract --input ../src --output ../src/assets/i18n/*.json --clean --sort --format namespaced-json --marker _"
   },
   "private": true,
   "dependencies": {
@@ -14,20 +15,28 @@
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
+    "@angular/fire": "github:angular/fire",
     "@angular/forms": "^15.1.0",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.6",
     "angular-cli-ghpages": "^1.0.5",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.17.1",
+    "flag-icon-css": "^4.1.7",
+    "flag-icons": "^6.6.6",
     "jquery": "^3.6.3",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^10.2.0",
     "ngx-pagination": "^6.0.3",
+    "ngx-translate-extract": "^1.0.0",
     "rxjs": "~7.8.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.4",
